# opengl_physics_engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_flags.txt  main.cpp
.cmake/api/v1/reply/: index-2023-03-21T09-50-09-0376.json  index-2023-04-03T07-02-47-0210.json  index-2023-04-12T07-24-39-0901.json
libs/Constants/: Constants.hpp
libs/Shader/: CMakeLists.txt  Shader.cpp  Shader.hpp
libs/Shapes/: CMakeLists.txt  Shapes.cpp  Shapes.hpp
libs/Utils/: Utils.cpp  Utils.hpp
libs/VerletCircle/: CMakeLists.txt  VerletCircle.cpp  VerletCircle.hpp
libs/VerletObject/: CMakeLists.txt  VerletObject.cpp  VerletObject.hpp
libs/VerletRect/: VerletRect.cpp  VerletRect.hpp
libs/VerletSolver/: CMakeLists.txt  VerletSolver.cpp  VerletSolver.hpp
libs/Window/: Window.cpp  Window.hpp
libs/stb_image/: CMakeLists.txt
shaders/base_triangle/: shader.fs  shader.vs
shaders/base_triangle_alt/: shader.fs  shader.vs
shaders/base_triangle_tex/: shader.fs  shader.vs
shaders/circle/: shader.vs
